<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:background="#E3E3E3"
        android:orientation="vertical"
        tools:context=".detalleVenta.detalleProducto">

        <include
            android:id="@+id/include"
            layout="@layout/action_bar_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/background_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25">


    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/detallesProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/DetallesProducto"
            android:textColor="@color/colornegro"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutRT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/constraintLayoutSuperior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detallesProducto"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/caja2LY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_detalles"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cajatextoenvios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutRT"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:id="@+id/linearEnvios"
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detallesTexto"
                android:layout_weight="1"
                android:layout_width="25dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/Detalles"
                android:textColor="@color/colornegro"
                android:textSize="24dp"
                android:layout_margin="15dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btnagregar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_button3"
                android:src="@drawable/ic_add" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cajaangela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cajatextoenvios"
            app:layout_constraintVertical_bias="0.01999998">

            <LinearLayout
                android:id="@+id/cajaangelaLY"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_detalles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ship"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colornegro"
                    android:textSize="20dp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewDirecciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/direccionentrega"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colornegro"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="#707070" />

                <TextView
                    android:id="@+id/txtmodeloRecibe"
                    android:text="Enviado por el proveedor: Junior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colornegro"
                    android:textSize="18dp" />


            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/detallesPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/DetallesPago"
            android:textColor="@color/colornegro"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cajaangela" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cajaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detallesPago"
            app:layout_constraintVertical_bias="0.01999998">

            <LinearLayout
                android:id="@+id/cajaPrecio"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_detalles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:textSize="22dp"
                    android:textColor="@color/colornegro"
                    android:layout_marginStart="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/addNewUserButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

                <TextView
                    android:id="@+id/precioTotal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:textColor="@color/colorVerde"
                    android:gravity="right"
                    android:layout_marginEnd="10dp"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/addNewUserButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/opcionesPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/opcionesPago"
            android:textColor="@color/colornegro"
            android:textSize="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cajaPago" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cajabtnEnvios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opcionesPago"
            app:layout_constraintVertical_bias="0.01999998">

            <LinearLayout
                android:id="@+id/cajaPagos"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal">


                <Button
                    android:textSize="10dp"
                    android:id="@+id/btndepositocuenta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/fondodebarra"
                    android:text="@string/hintdeposito"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:textSize="10dp"
                    android:id="@+id/btncontraentrega"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/fondodebarra"
                    android:text="@string/hintcontraentrega"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>