<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark" />

            <ImageView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:id="@+id/imgObtiene"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_android" />


        </com.github.florent37.shapeofview.shapes.ArcView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_android"></ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/escribenombre"
                    android:inputType="text"
                    android:id="@+id/textInputName">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_android" />


            <Spinner
                android:id="@+id/spLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_android" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintcorreoelec"
                    android:inputType="textEmailAddress"
                    android:id="@+id/textInputEmail" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_android" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintpass"
                    android:inputType="textPassword"
                    android:id="@+id/textInputPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_android"
                android:drawablePadding="2dp"
                android:id="@+id/btdSeleccionarRegister"
                android:textColor="@android:color/white"
                app:backgroundTint="#ef9a9a"
                android:text="@string/seleccfoto"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/img_foto"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ImageView>
        </LinearLayout>


    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_android"
        android:layout_gravity="left|top"
        app:civ_circle_background_color="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageNext"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_android"
        android:layout_gravity="right|top"
        app:civ_circle_background_color="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Link de Recurso Cargado"
            android:inputType="text"
            android:id="@+id/solucionLink"
            android:visibility="gone" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>